GNOME Bugzilla – Bug 634939
unable to build need notify_init
Last modified: 2010-11-16 15:10:51 UTC
when build via jhbuild for gnome-shell d CCLD gnome-settings-daemon gnome_settings_daemon-main.o: In function `main': /home/gnomeshell/gnome-shell/source/gnome-settings-daemon/gnome-settings-daemon/main.c:274: undefined reference to `notify_init' collect2: ld returned 1 exit status
commit fea948a5c3348badf613658f8a3527a1107d392e Author: Bastien Nocera <hadess@hadess.net> Date: Tue Nov 16 15:09:45 2010 +0000 daemon: Fix build without libnotify present It's optional in the configure, so it should be optional in main. https://bugzilla.gnome.org/show_bug.cgi?id=634939 Note that we might make libnotify a hard requirement in the near future.