daemon: Fix build without libnotify present

It's optional in the configure, so it should be optional in main.

https://bugzilla.gnome.org/show_bug.cgi?id=634939